--- a/mf-focchi/rm/rm-auth-config.json
+++ b/mf-focchi/rm/rm-auth-config.json
@@ -1,8 +1,8 @@
 {
   "mf": "Auth",
-  "api": "https://rm-middleware-api.dev-digital-enabler.eng.it/api/v1",
+  "api": "https://apps.digibuild-project.eu/rule-manager-middleware/api/v1",
   "keycloak": {
-    "url": "https://idm.dev-digital-enabler.eng.it/auth",
+    "url": "https://digibuild.epu.ntua.gr/auth",
     "clientId": "rule-app",
     "enabled": true
   }
