--- a/mf-focchi/rm/rm-event-handler-config.json
+++ b/mf-focchi/rm/rm-event-handler-config.json
@@ -1,4 +1,4 @@
 {
   "mf": "Event Handler",
-  "api": "https://rm-middleware-api.dev-digital-enabler.eng.it/api/v1"
+  "api": "https://apps.digibuild-project.eu/rule-manager-middleware/api/v1"
 }
