--- a/mf-focchi/rm/rm-rule-editor-config.json
+++ b/mf-focchi/rm/rm-rule-editor-config.json
@@ -1,5 +1,5 @@
 {
   "mf": "Rule Editor",
-  "api": "https://rm-middleware-api.dev-digital-enabler.eng.it/api/v1",
+  "api": "https://apps.digibuild-project.eu/rule-manager-middleware/api/v1",
   "storageImgs": "https://storage.digital-enabler.eng.it/imgs"
 }
