--- a/mf-focchi/rm/rm-sidebar-config.json
+++ b/mf-focchi/rm/rm-sidebar-config.json
@@ -1,6 +1,6 @@
 {
   "mf": "Sidebar",
-  "api": "https://rm-middleware-api.dev-digital-enabler.eng.it/api/v1",
+  "api": "https://apps.digibuild-project.eu/rule-manager-middleware/api/v1",
   "storageImgs": "https://storage.digital-enabler.eng.it/imgs",
   "jsonTools": "https://raw.githubusercontent.com/digital-enabler/UI-Configs/main/mf-dev/common/services.json",
   "links": [
