--- a/mf-focchi/rm/rm-sidebar-config.json
+++ b/mf-focchi/rm/rm-sidebar-config.json
@@ -1,7 +1,7 @@
 {
   "mf": "Sidebar",
   "api": "https://apps.digibuild-project.eu/rule-manager-middleware/api/v1",
-  "storageImgs": "https://storage.digital-enabler.eng.it/imgs",
+  "storageImgs": "https://apps.digibuild-project.eu/focchi-storage/images",
   "jsonTools": "https://raw.githubusercontent.com/digital-enabler/UI-Configs/main/mf-dev/common/services.json",
   "links": [
     {
