--- a/mf-focchi/common/common-footer-config.json
+++ b/mf-focchi/common/common-footer-config.json
@@ -1,5 +1,5 @@
 {
     "mf": "Footer",
     "api": "",
-    "storageImgs": "https://storage.digital-enabler.eng.it/imgs"
+    "storageImgs": "https://apps.digibuild-project.eu/focchi-storage/images"
 }
