--- a/mf-focchi/rm/rm-rules-list-config.json
+++ b/mf-focchi/rm/rm-rules-list-config.json
@@ -1,6 +1,6 @@
 {
   "mf": "Rules List",
   "api": "https://apps.digibuild-project.eu/rule-manager-middleware/api/v1",
-  "storageImgs": "https://apps.digibuild-project.eu/focchi-storage/images",
+  "storageImgs": "http://apps.digibuild-project.eu/focchi-storage/images",
   "apiAssetsUrl": "https://f87d8c7c-3048-465e-a9be-8131e2a875d8.mock.pstmn.io/api/v1"
 }
