--- a/mf-focchi/rm/rm-rule-editor-config.json
+++ b/mf-focchi/rm/rm-rule-editor-config.json
@@ -1,5 +1,5 @@
 {
   "mf": "Rule Editor",
   "api": "https://apps.digibuild-project.eu/rule-manager-middleware/api/v1",
-  "storageImgs": "https://apps.digibuild-project.eu/focchi-storage/images"
+  "storageImgs": "http://apps.digibuild-project.eu/focchi-storage/images"
 }
