--- a/mf-focchi/config.json
+++ b/mf-focchi/config.json
@@ -1,7 +1,7 @@
 {
   "realm": "Dev",
   "palette": {
-    "primary": "#077bbe",
+    "primary": "#065989",
     "secondary": "#449ccd",
     "accent": "#A0B1BE",
     "error": "#F44336",
